--- a/hemanext_email_blast.html
+++ b/hemanext_email_blast.html
@@ -152,21 +152,10 @@ u + .em_body .em_full_wrap {
 
 		<!--Banner section -->
 		<tr class="em_default">
-          <td valign="top" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
-              <tbody><tr>
-                <td valign="top" align="left"><img class="em_img" alt="AABB San Antonio 2019 Oct. 19-20" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:155px;" src="https://i.imgur.com/WnRY07L.jpg" width="auto" border="0" height="auto"></td>
-				<!-- <td style="font-family:'Open Sans', Arial, sans-serif; font-size:24px; line-height:30px; color:#FFFFFF;" valign="top" align="center" class="em_text1"><div style="background-image: url('assets/gfx/Complete Asset Package/JPG/HemaNext AABB Email Blast_3 - AABB San Antonio Logo.jpg'); background-size: cover; text-align: center;"><td>AABB San Antonio 2019 Oct. 19-20</td></div></td> -->
-              </tr>
-			  <tr>
-                <td style="font-size:0px; line-height:0px; height:25px;" height="25">&nbsp;</td>
-				<!--—this is space of 15px to separate two paragraphs ---->
-              </tr>
-            </tbody></table></td>
 			<td valign="top" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-                  <!-- <td valign="top" align="left"><div class="em_img" style="display:center; color:#FFFFFF; max-width: 544px; background-image: url('assets/gfx/Complete Asset Package/JPG/HemaNext AABB Email Blast_4 - Purple Photo Overlay.jpg'); background-size: cover; text-align: center;"></div></td> -->
-				  <td valign="top" align="left"><img class="em_img" alt="Visit HemaNext at Booth #930" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:544px;" src="https://i.imgur.com/D4FC42e.jpg" width="auto" border="0" ></td>
-				  <!-- <td style="font-family:'Open Sans', Arial, sans-serif; font-size:24px; line-height:30px; color:#FFFFFF;" valign="top" align="center" class="em_text1"><div style="background-image: url('assets/gfx/Complete Asset Package/JPG/HemaNext AABB Email Blast_4 - Purple Photo Overlay.jpg'); background-size: cover; text-align: center;">AABB San Antonio 2019 Oct. 19-20</div></td> -->
+				  <!-- <td valign="top" align="left"><img class="em_img" alt="Visit HemaNext at Booth #930" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:544px;" src="https://i.imgur.com/D4FC42e.jpg" width="auto" border="0" ></td> -->
+				  <td valign="top" align="left"><img class="em_img" alt="Visit HemaNext at Booth #930" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:700px;" src="https://i.imgur.com/gTlzrKC.jpg" width="auto" border="0" ></td>
                 </tr>
 				<tr>
                   <td style="font-size:0px; line-height:0px; height:15px;" height="15">&nbsp;</td>
@@ -176,17 +165,6 @@ u + .em_body .em_full_wrap {
         </tr>
 
 		<!-- mobile banner -->
-		<tr class="em_mobile">
-          <td valign="top" align="center" style="display:flex"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
-              <tbody><tr>
-                <td valign="top" align="center"><img class="em_img" alt="AABB San Antonio 2019 Oct. 19-20" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:200px;" src="https://i.imgur.com/jZCnJz0.jpg" width="auto" border="0" height="auto"></td>
-              </tr>
-			  <tr>
-                <td style="font-size:0px; line-height:0px; height:10px;" height="10">&nbsp;</td>
-				<!--—this is space of (x)px acting as a bottom margin ---->
-              </tr>
-            </tbody></table></td>
-        </tr>
 		<tr class="em_mobile">
           <td valign="top" align="center" style="display:flex"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody><tr>
