remove mark your calendar + educational session section

--- a/hemanext_email_blast.html
+++ b/hemanext_email_blast.html
@@ -178,7 +178,7 @@ u + .em_body .em_full_wrap {
         </tr>
         <!--//Banner section-->
 
-		<!--Text section-->
+		<!--Text section 1-->
         <tr class="em_default">
           <td valign="top" align="center"><table width="90% !important" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody><tr>
@@ -203,34 +203,8 @@ u + .em_body .em_full_wrap {
               </tr>
             </tbody></table></td>
         </tr>
-		<!--//Text Section-->
-
-		<!--Calendar section-->
-        <tr class="em_default">
-          <td valign="top" align="center"><table width="90% !important" cellspacing="0" cellpadding="0" border="0" align="center">
-              <tbody><tr>
-                <td valign="top" align="center"><img class="em_img" alt="Mark your calendar — RBC Storage: The Oxygen Paradox on Saturday October 19 from 8:00am – 9:30am in the Hemisfair Ballroom II" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:700px;" src="https://i.imgur.com/8PDNAhx.jpg" width="700" border="0"></td>
-              </tr>
-			  <tr>
-				<td style="font-size:0px; line-height:0px; height:25px;" height="25">&nbsp;</td>
-			  </tr>
-            </tbody></table></td>
-        </tr>
-		<!-- mobile section -->
-		<tr class="em_mobile">
-          <td valign="top" align="center" style="display:flex"><table width="90% !important" cellspacing="0" cellpadding="0" border="0" align="center">
-              <tbody><tr>
-                <td valign="top" align="center"><img class="em_img" alt="Mark your calendar — RBC Storage: The Oxygen Paradox on Saturday October 19 from 8:00am – 9:30am in the Hemisfair Ballroom II" style="display:center; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:400px;" src="https://i.imgur.com/V31u9lp.jpg" width="auto" border="0" height="auto"></td>
-              </tr>
-			  <tr>
-                <td style="font-size:0px; line-height:0px; height:20px;" height="20">&nbsp;</td>
-				<!--—this is space of (x)px acting as a bottom margin ---->
-              </tr>
-            </tbody></table></td>
-        </tr>
-
-		<!--//Calendar Section-->
-		<!--Text Section -->
+		<!--//Text Section 1-->
+		<!--Text Section 2-->
 		<tr class="em_default">
           <td valign="top" align="center" padding="35px 70px 30px"><table width="70% !important" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody><tr>
@@ -254,7 +228,7 @@ u + .em_body .em_full_wrap {
               </tr>
             </tbody></table></td>
         </tr>
-		<!--//Text section-->
+		<!--//Text section 2-->
 
 		<!--Events section-->
         <tr class="em_default">
